--- a/style.css
+++ b/style.css
@@ -96,3 +96,46 @@ ul li {
         height: auto;
     }
 }
+/* .content {
+    height: 400px;
+} */
+.todo {
+    /* top: 0px; */
+    margin-top: 20px;
+    width: 100vw;
+    height: 100vh;
+    background: rgb(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.content {
+    width: 90%;
+    height: 90%;
+    /* background-color: rgb(255, 80, 80);' */
+    text-align: center;
+}
+.content span {
+    font-size: 95px;
+    font-weight: 800;
+    color: yellow;
+}
+.todolist {
+    font-size: 60px;
+    font-weight: 900;
+    color: whitesmoke;
+}
+.quote {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 20px;
+    height: 60px;
+    background-color: #333;
+    color: red;
+    position: relative;
+    position: fixed;
+    top: 0px;
+}
